# velox

./: CMakeLists.txt
velox/: CMakeLists.txt
velox/common/encode/: Coding.h
velox/common/testutil/: CMakeLists.txt  Latency.cpp  Latency.h  StopWatch.h
velox/connectors/hive/storage_adapters/hdfs/: HdfsReadFile.cpp
velox/dwio/common/: IntDecoder.cpp  IntDecoder.h  SelectiveColumnReader.h
velox/dwio/dwrf/common/: CMakeLists.txt  Compression.cpp  FileMetadata.h  RLEv1.cpp  RLEv1.h  RLEv2.cpp
velox/dwio/dwrf/reader/: ColumnReader.cpp  DwrfReader.cpp  DwrfReader.h  ReaderBase.cpp  SelectiveDecimalColumnReader.cpp
velox/examples/: CMakeLists.txt  OrcLocalQuery.cpp  ScanHdfsOrc.cpp  SelectiveScanOrc.cpp
velox/exec/tests/utils/: QueryAssertions.cpp
velox/type/: DecimalUtil.h
velox/vector/: DictionaryVector.h  SimpleVector.h
velox/verify/: Adaptor.hh  CMakeLists.txt  ColumnPrinter.cc  ColumnReader.cc  ColumnReader.hh  ColumnWriter.cc  ColumnWriter.hh  Compression.cc  OrcCheck.cpp  OrcHdfsFile.hh  Reader.cc  Reader.hh  Statistics.cc  Statistics.hh  StripeStream.cc  StripeStream.hh  TypeImpl.cc  TypeImpl.hh  Writer.cc
velox/verify/io/: InputStream.hh  OutputStream.hh
velox/verify/wrap/: coded-stream-wrapper.h  orc-proto-wrapper.cc  orc-proto-wrapper.hh  snappy-wrapper.h  zero-copy-stream-wrapper.h
